# ScholarScout

./: .env.example  .gitignore  README.md  app.py  pyproject.toml  requirements.txt
configs/: config.py
scripts/: agent.py  index_professors.py  index_universities.py  insert_sql_data.py  routes.py  scholarscout_schema.sql  setup_db.py
scripts/RAG/: data_ingestion.py  llm.py  main.py  query_parser.py  rag_pipeline.py  schema_setup.py  test_context.txt
scripts/scraper/: catalogue_scraper.py  main.py  program_scraper.py
templates/: index.html
tests/: compare_retrieval_algorithms.py  eval.py
